Fixed checkbox alignment in course page

--- a/static/course-style.css
+++ b/static/course-style.css
@@ -163,6 +163,12 @@
 .comment-form {
     margin-left: 1%;
     margin-bottom: 1%;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    
+}
+#comment-form-1 {
     display: flex;
 }
 
